add checker api status
